--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <main>
         <section class="firstSection">
             <div class="leftSection">
-                <div>Hi, My name is <br><span class="text-purple">Anurag</span></div>
+                <div>Hi, My name is <br><span class="text-purple">Anurag Verma</span></div>
                 <div>and I am a passionate</div>
                 <span id="element"></span>
                 <div class="buttons">
