Some slight changes

--- a/index.html
+++ b/index.html
@@ -48,13 +48,14 @@
             <br>
             <br>
             <div class="experience">
-                <h3>Member, GNX Netaji Subhash Engineering College</h3>
+                <h3>Member, GNX Netaji Subhash Engineering College</h3> <br>
                 <p>Jul 2023 - Present · 3 months</p>
                 <p>Kolkata, West Bengal, India · On-site</p>
             </div>
             <br>
             <div class="experience">
-                <h3>YouTube Content Creator at Anurag Bytes</h3>
+                <h3>YouTube Content Creator at Anurag Bytes</h3> <br>
+
                 <p>Feb 2023 - Present · 8 months</p>
                 <p>Kolkata, West Bengal, India · Remote</p>
                 <p>
@@ -66,46 +67,51 @@
             </div>
             <br>
             <div class="experience">
-                <h3>Internshala Student Partner</h3>
+                <h3>Internshala Student Partner</h3> <br>
                 <p>Dec 2022 - Mar 2023 · 4 months</p>
                 <p>Kolkata, West Bengal, India · Remote</p>
                 <p>
-                    As an ISP, I had the opportunity to be the face of Internshala on my campus and represent the company in front of students, professors, and other stakeholders. My role included the following responsibilities:
+                    As an ISP, I had the opportunity to be the face of Internshala on my campus and represent the
+                    company in front of students, professors, and other stakeholders. My role included the following
+                    responsibilities:
                 </p>
                 <ul>
-                    <li>Promoting Internshala's services and opportunities on my campus through various channels such as social media, email, posters, and events.</li>
-                    <li>Identifying potential student ambassadors and coordinating with them to increase brand awareness and engagement.</li>
-                    <li>Conducting workshops, webinars, and other events to educate students on topics such as career development, skill-building, and internships.</li>
-                    <li>Collaborating with the Internshala team to provide feedback on product improvements, marketing campaigns, and student engagement initiatives.</li>
-                    <li>Building and maintaining relationships with key stakeholders such as campus authorities, student organizations, and career centers.</li>
-                </ul>      
+                    <li>Promoting Internshala's services and opportunities on my campus through various channels such as
+                        social media, email, posters, and events.</li>
+                    <li>Identifying potential student ambassadors and coordinating with them to increase brand awareness
+                        and engagement.</li>
+                    <li>Conducting workshops, webinars, and other events to educate students on topics such as career
+                        development, skill-building, and internships.</li>
+
+
+                </ul>
             </div>
-</div>
-</section>
-</main>
-<footer>
-    <div class="footer">
-        <div class="footer-first">
-            <h3>Developer Portfolio</h3>
+            </div>
+        </section>
+    </main>
+    <footer>
+        <div class="footer">
+            <div class="footer-first">
+                <h3>Developer Portfolio</h3>
+            </div>
+            <div class="footer-second">
+                <ul>
+                    <li>THANKS FOR VISITING</li>
+                    <br><br>
+                    <li><a href="\">CONTACT ME</a></li>
+            </div>
+            <div class="footer-rights">
+                anuragbytes.com | ALL RIGHTS RESERVED
+            </div>
         </div>
-        <div class="footer-second">
-            <ul>
-                <li>THANKS FOR VISITING</li>
-                <br><br>
-                <li><a href="\">CONTACT ME</a></li>
-        </div>
-        <div class="footer-rights">
-            xyzportfolio.com | ALL RIGHTS RESERVED
-        </div>
-    </div>
-</footer>
-<script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
-<script>
-    var typed = new Typed('#element', {
-        strings: ['Web Developer', 'Android Developer', 'Open Source Contributer'],
-        typeSpeed: 50,
-    });
-</script>
+    </footer>
+    <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
+    <script>
+        var typed = new Typed('#element', {
+            strings: ['Web Developer', 'Android Developer', 'Open Source Contributer'],
+            typeSpeed: 50,
+        });
+    </script>
 </body>
 
 </html>
