Added Resume Link

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <span id="element"></span>
                 <div class="buttons">
                     <a href="https://github.com/anuragverma108"><button class="btn">Visit GitHub</button></a>
-                    <button class="btn">Download Resume</button>
+                    <a href="Anurag Verma Resume.pdf"><button class="btn">Download Resume</button></a>
                 </div>
             </div>
             <div class="rightSection">
