did some updations

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
 <body>
     <header>
+        <!-- Navigation Panel -->
         <nav>
             <div class="left">Anurag's Portfolio</div>
             <div class="right">
